--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "angularTypescriptDemos",
   "version": "0.0.0",
   "dependencies": {
+    "jquery": "~2.1.4",
     "angular-animate": "~1.4.2",
     "angular-cookies": "~1.4.2",
     "angular-touch": "~1.4.2",
